2010-01-22  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Darin Adler.

        Make storage events match the spec.
        https://bugs.webkit.org/show_bug.cgi?id=30546

        Update the storageEvent algorithm to match the change in WebCore.

        * src/StorageAreaProxy.cpp:
        (WebCore::StorageAreaProxy::storageEvent):

2010-01-22  Elliot Glaysher  <erg@chromium.org>

        Reviewed by David Levin.

        Chromium: theme selection colors to match gtk theme
        Add functions to RenderThemeChromiumLinux to change the selection color
        according to the current GTK+ theme.

        Since the change is to the Chromium WebKit API layer, testing is done
        in Chromium's test shell (see Chromium side of this patch:
        http://codereview.chromium.org/554004)

        https://bugs.webkit.org/show_bug.cgi?id=33921

        * public/WebView.h: Adds interface to change the selection colors
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setSelectionColors): Implements new interface.
        * src/WebViewImpl.h:

2010-01-22  Steve VanDeBogart  <vandebo@chromium.org>

        Reviewed by David Levin.

        Middle clicking the main scroll bars should not trigger a paste event
        in Linux chromium.
        https://bugs.webkit.org/show_bug.cgi?id=33062

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::mouseUp):

2010-01-22  Albert J. Wong  <ajwong@chromium.org>

        Not reviewed.  backout.

        Backout r53705.
        Causes ui_tests to timeout, and browser_tests to fail with
        TestConnectToBadPort and WindowOpenInvalidExtension.

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchDidChangeLocationWithinPage):
        (WebKit::FrameLoaderClientImpl::postProgressStartedNotification):
        (WebKit::FrameLoaderClientImpl::postProgressFinishedNotification):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):